new delete method + controller updates.
