# src/main/resources/openapi3.yaml
@@ -61,6 +61,28 @@ paths:
         404:
           description: Device Not Found
           content: {}
+    delete:
+      operationId: delDeviceById
+      tags:
+        - device
+      description:
+        remove device object by its id
+      parameters:
+        - name: id
+          in: path
+          description: An ID-String of the Device (e.g. MAC Address)
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Successful response
+          content: {}
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+        404:
+          description: Device Not Found
+          content: {}
 
       security:
       - register_device_key: []
@@ -110,10 +132,7 @@ paths:
       responses:
         201:
           description: device added
-          content:
-            application/json:
-              schema:
-                type: object
+          content: {}
         400:
           description: device post not successful, bad request.
           content: {}
